# Tarea1_ANPI

./: Calculadora_Funtras.exe.lnk
Calculadora_Funtras/: CMakeLists.txt  funtras.cpp  funtras.h  helpdialog.cpp  helpdialog.h  helpdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Calculadora_Funtras/multiprecision-Boost_1_81_0/: CMakeLists.txt
EcuaciónKepler/: aplicacion.py  biseccion.py  falsa_posicion.py  jarratt.py  jarratt_.py  potra_ptak.py
